# ollama-queue

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  gitleaks.toml  mypy-config.toml  ollama-queue.service  pyproject.toml  release-notes.md  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.json
docs/: 2026-03-13-dependency-audit.md  gotchas.md  llm-guide-design-system.md  manifest.yml  pipeline-status.md
ollama_queue/: LLM.md  README.md  __init__.py  api.py  app.py  burst.py  cli.py  cli_backend.py  daemon.py  db.py  deferral_scheduler.py  dlq.py  dlq_scheduler.py  estimator.py  eval_analysis.py  eval_engine.py  health.py  intelligence.py  intercept.py  metrics_parser.py  models.py  patcher.py  performance_curve.py  runtime_estimator.py  scanner.py  scheduler.py  slot_scoring.py  stall.py  system_snapshot.py
scripts/: backend-onboard.sh  bootstrap-backend.sh  docker-mgmt-sidecar.py  generate-embeddings.sh  migrate_dlq_max_retries.py  migrate_eval_v2.py  migrate_timers.py  setup-remote-agent.ps1
sidecar/: Dockerfile  backend_agent.py
tasks/: prd-domain-reorganization.md  prd.json
tests/: conftest.py  test_api.py  test_api_cov_a.py  test_api_cov_b.py  test_api_cov_c.py  test_api_cov_d.py  test_api_eval_runs.py  test_api_eval_settings.py  test_api_eval_variants.py  test_api_forge_archive.py  test_api_forge_runs.py  test_api_forge_settings.py  test_backend_command.py  test_backend_router.py  test_backends_api.py  test_burst.py  test_cli.py  test_cli_backend.py  test_consumers.py  test_consumers_api.py  test_daemon.py  test_db.py  test_db_backends.py  test_db_schema.py  test_deferral.py  test_deferral_scheduler.py  test_dlq.py  test_dlq_scheduler.py  test_embed_proxy.py  test_estimator.py  test_eval_analysis.py  test_eval_backend_url.py  test_eval_engine.py  test_eval_generate.py  test_eval_judge.py  (+44 more)
(+377 files in other folders)
