[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ollama_queue*"]

[project]
name = "ollama-queue"
version = "0.1.0"
description = "Ollama job queue scheduler with priority, health monitoring, and web dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Justin McFarland", email = "parthalon025@gmail.com"},
]
dependencies = [
    "click>=8.1.0",
    "croniter>=1.4.0",
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "ruamel.yaml>=0.18.0",
    "tomlkit>=0.12.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-xdist>=3.5.0", "scikit-learn>=1.4.0"]

[project.scripts]
ollama-queue = "ollama_queue.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist load"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
